# Pure-Python-Back-SEO

./: .gitignore  BackSEOAgencies.py  BackSEOApplicationManager.py  BackSEODataHandler.py  BackSEOSettings.py  CONTRIBUTING.md  FlaskApp.py  LICENSE  LicenseReport.rst  PluginController.py  README.md  __main__.py  backseoagencyinstallcompiler.iss  bseodef.ini  core.py  pyproject.toml  requirements.txt  runNuitka.py  somereport.rst
.github/ISSUE_TEMPLATE/: documentation-issue.md
Fonts/: USERFONT
Plugins/: __init__.py  back_Base.py  back_Draw.py  back_Editor.py
Plugins/Examples/: README  Speedy_Compiled.cp311-win_amd64.pyd  Speedy_Compiled.pyi  Speedy_Compiled.pyx  back_Speedy_Uncompiled.py  pre-compiled python Speedy
SEO/: Agency.py  Agency3.py  Local.py  Local2.py
SEO/Resources/: LocalRankTracker.py  LocalSyncTracker.cp311-win_amd64.pyd  LocalSyncTracker.py  ReportCreator.py  _LocalSyncTracker.py  _LocalSyncTracker.pyi  agency
Utils/: Plugin.py  Speedy_Compiled.py  _ChooseFonts.py  _CropDPG_SC.py  _EditTheme.py  _GoogleResults.py  _PAA.py  _Rake.py  _SEOImage.py  _SavePlots.py  _Scraperz.py  _SiteMap.py  _WordPressUpload.py  __init__.py  _keyword_stuff.py  _mFastURLs.py  _textstat.py  plugintests.py  setup.py
Utils/certifi/: PageAudit.cp311-win_amd64.pyd  _GoogleResults.cp311-win_amd64.pyd  _mFastURLs.cp311-win_amd64.pyd
core_ui/: AI.py  Audit.py  Audit2.py  Editor.py  GenerateContentIdeas.py  InspectResults.py  __basic__.pyi  __init__.py
core_ui/Widgets/: Add_Info.py  AuditView.py  (+3 more)
static/: app.js  styles.css
templates/: index.html
themes/: light.ini
(+12 files in other folders)
