[project]
name = "pure-python-back-seo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "beautifulsoup4>=4.13.3",
    "chardet>=5.2.0",
    "dearpygui>=2.0.0",
    "docxtpl>=0.19.1",
    "flask>=3.1.0",
    "geopy>=2.4.1",
    "nltk>=3.9.1",
    "playwright==1.39.0",
    "python-docx>=1.1.2",
    "readability>=0.3.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
    "xdialog>=1.2.0.1",
]
